edit and delete materials and templates
