# src/controllers/material-controller.ts
@@ -5,7 +5,7 @@ export async function getMaterials(_: express.Request, res: express.Response) {
   try {
     const materials = await service.getMaterials();
 
-    res.send(materials);
+    res.status(200).send(materials);
   } catch (err) {
     console.error('materials::controller::getMaterials::error', err);
     res.status(500);
@@ -19,9 +19,38 @@ export async function addMaterial(req: express.Request, res: express.Response) {
 
     await service.addMaterial(material);
 
-    res.send();
+    res.status(200).send();
   } catch (err) {
     console.error('materials::controller::addMaterial::error', err);
+    res.status(500);
+    res.send();
+  }
+}
+
+export async function editMaterial(req: express.Request, res: express.Response) {
+  try {
+    const material = req.body;
+    const id = req.params.id;
+
+    await service.editMaterial(id as string, material);
+
+    res.status(200).send();
+  } catch (err) {
+    console.error('materials::controller::editMaterial::error', err);
+    res.status(500);
+    res.send();
+  }
+}
+
+export async function deleteMaterial(req: express.Request, res: express.Response) {
+  try {
+    const id = req.params.id;
+
+    await service.deleteMaterial(id as string);
+
+    res.status(200).send();
+  } catch (err) {
+    console.error('materials::controller::deleteMaterial::error', err);
     res.status(500);
     res.send();
   }
